# Stellar-Class

./: .gitignore  main.py  pyproject.toml
notebooks/: experiment.ipynb
src/: exception.py  logger.py
