[project]
name = "stellar-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "xgboost>=3.3.0",
]
